# trellis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: BUILD_STATUS.md  DIRECTION.md  DIRECTION_WORK.md  GARMIN_INTEGRATION.md  INTEGRATION_PLAN.md  INTERACTION_ARCHITECTURE.md  PRODUCT_SPEC.md  READINESS.md  TRAINING_ENGINE.md
scripts/: reset_training.sql
services/health-worker/: Dockerfile  app.py  garmin.py  requirements.txt
src/trellis/: __init__.py  assembler.py  captures.py  config.py  corrections.py  cycle.py  ef_context.py  ef_tool.py  garmin_push.py  garmin_setup.py  garmin_sync.py  goals.py  health.py  health_postgres.py  health_status.py  history.py  holistic_load.py  intelligence_context.py  interaction.py  learn_context.py  learn_models.py  learn_repo.py  learn_service.py  learn_tool.py  main.py  meta_tools.py  notes_context.py  notes_tool.py  obsidian.py  oracle.py  (+31 more)
templates/: domain_claude.py  domain_models.py  domain_repo.py  domain_router.py  domain_service.py  domain_tool.py
tests/: conftest.py  test_cycle.py  test_garmin.py  test_garmin_setup.py  test_garmin_sync.py  test_health.py  test_health_status.py  test_health_worker_contract.py  test_holistic_load.py  test_postgres_cycle.py  test_postgres_task.py  test_readiness.py  test_readiness_service.py  test_run_targets.py  test_session_completion.py  test_tasks.py  test_telegram_bot.py  test_training.py  test_training_history.py  test_training_readiness.py  test_training_service.py  test_training_targets.py  test_user_context.py
(+29 files in other folders)
