[project]
name = "trellis"
version = "0.1.0"
description = "A conversational external brain with visible Obsidian state"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.75,<1",
  "garminconnect>=0.2,<1",
  "groq>=0.29,<1",
  "psycopg2-binary>=2.9.10,<3",
  "python-dotenv>=1.0,<2",
  "python-telegram-bot[job-queue]>=22,<23",
]

[project.scripts]
trellis = "trellis.main:main"
trellis-garmin-setup = "trellis.garmin_setup:main"
trellis-garmin-sync = "trellis.garmin_sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trellis"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "testcontainers>=4.14.2",
]
